--- a/SpringBoot/Day31-Spring-Security-Database/src/main/resources/application.properties
+++ b/SpringBoot/Day31-Spring-Security-Database/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.web.resources.static-locations=file:src/main/resources/static/
 
+# database
+spring.datasource.url=jdbc:mysql://localhost:3306/db-user-test?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
